src/test/run-pass/ivec-pass-by-value.rs
// xfail-stage0

fn f(int[] a) {}
fn main() { f(~[ 1, 2, 3, 4, 5 ]); }

